# hardware-agnostic-fsm

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: arm-none-eabi.cmake
lib/motor_controller/: CMakeLists.txt  motor_fsm.c  motor_fsm.h
lib/utils/: CMakeLists.txt  utils.c  utils.h
src/: CMakeLists.txt  main.c  main_working.c  startup_stm32f446retx.s  startup_stm32f446xx.S  stm32f446re.ld  stm32f4xx_hal_conf.h  stm32f4xx_it.c  syscalls.c
test/: CMakeLists.txt  test_motor_fsm.c  test_utils.c
